# somaagent01

./: # 🎯 VIBE CODING RULES - THE ULTIMATE TE.sql  .build.env  .dockerignore  .env.devh  .env.devh.example  .env.example  .env.memory  .env.somabrain  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  AGENT_TASKS.md  AGENT_ZERO_UI_ANALYSIS.md  ARCHITECTURAL_REFACTOR_ROADMAP.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_REPORT.md  AUDIT_REPORT.md  CANONICAL_ROADMAP.md  CHANGELOG.md  CHANGELOG_SERVICE_REGISTRY.md  CHAT_FLOW_DIAGRAM.md  CLEANUP_COMPLETED.md  CODEXROADMAP.md  COMPLIANCE_REPORT_ISO_OECD.md  COMPLIANCE_ROADMAP_100_PERCENT.md  CONTAINER_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  DJANGO_AUDIT_CRITICAL.md  Dockerfile  Dockerfile.analyzer  Dockerfile.backup  Dockerfile.canonical  Dockerfile.gateway  Dockerfile.monolith  Dockerfile.monolith.simple  Dockerfile.worker  (+151 more)
.kiro/: CANONICAL_DESIGN.md  CANONICAL_REQUIREMENTS.md  CANONICAL_ROADMAP.md  CANONICAL_TASKS.md  REFACTORING_PLAN.md
_modules/: index.html  random.html  secrets.html
_sources/: index.rst.txt
a0_data/: .gitkeep  Build a Small Language Model (SLM) From Scratch [pOFcwcwtv3k].en.srt  DockerfileLocal  ROADMAP_CANONICAL.md  ROADMAP_SPRINTS.md  SOMAGENT_TOOL_SERVICE_DESIGN.md  agent.py  conftest.py  docker-compose.somaagent01.yaml  initialize.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_ui.py  update_reqs.py
aaas/: __init__.py  brain.py
admin/: .env  api.py
api/: a2a.html  agents.html  agents.services.agent_context.html  agents.services.agentiq_config.html  agents.services.agentiq_governor.html  agents.services.agentiq_metrics.html  agents.services.cognitive.html  agents.services.context_builder.html  assets.api.html  audit.html  auth_config.html  capabilities.api.html  chat.migrations.0001_initial.html  common.account_lockout.html  common.middleware.html  common.pkce.html  common.rate_limit.html  completions.html  config.api.html  core.api.html  core.api.llm.html  core.api.migrate.html  core.application.services.html  core.application.use_cases.conversation.build_context.html  core.application.use_cases.conversation.html  core.application.use_cases.html  core.application.use_cases.tools.execute_tool.html  core.application.use_cases.tools.html  core.apps.html  core.config.loader.html  core.config.models.html  core.config.registry.html  core.helpers.duckduckgo_search.html  core.helpers.extension.html  core.helpers.fasta2a_client.html  core.helpers.file_browser.html  core.helpers.git.html  core.helpers.guids.html  core.helpers.history.html  core.helpers.html  (+126 more)
architecture_refactor/: CENTRALIZED_ARCHITECTURE_PLAN.md
archive/: deploy-optimized-20251030.sh  run_ui-20251030.py
asyncpg/: __init__.py
cleanup-backup/: Dockerfile.slim-browser  DockerfileLocal.minimal  DockerfileLocal.tiny  DockerfileLocal.working  README.md  docker-compose.slim-browser.yaml  docker-compose.slim.yaml  override-noa0.yaml
conf/: agentiq.yaml  features.yaml  model_profiles.yaml  model_providers.yaml
config/: __init__.py  settings.py  settings_registry.py
core/: __init__.py  memory_client.py  models.py
deployment/: aws.html  index.html
development/: contributing.html
docker/: docker-compose.flink.yml
docs/: .markdownlint.json  AGENT_CONTINUITY.md  AGENT_ONBOARDING.md  AGENT_QUICKSTART.md  AGENT_SERVICE_MAP.md  ARCHITECTURE.md  CANONICAL_ARCHITECTURE_ROADMAP.md  CANONICAL_DESIGN.md  CANONICAL_REQUIREMENTS.md  CANONICAL_RESILIENCE_SRS.md  CANONICAL_SAAS_DESIGN.md  CANONICAL_USER_JOURNEYS_SRS.md  CHAT_FLOW_DIAGRAM.md  CLEANUP_REPORT.md  COMPLETION_SUMMARY.md  CONTEXT_BUILDER_ROADMAP_REVISED.md  DEVELOPMENT_GUIDE.md  DEV_HARDENED.md  DJANGO_PATTERNS.md  DOCUMENTATION_COMPLIANCE.md  GAP_ANALYSIS.md  INFRASTRUCTURE_INTEGRATION.md  PRODUCTION-ROADMAP-TASKS.md  README.md  RESILIENCE_ARCHITECTURE.md  ROADMAP.md  ROADMAP_CANONICAL.md  ROADMAP_GAP_ANALYSIS.md  ROADMAP_SPRINTS.md  SHARED_INFRA_DEPENDENCY.md  SPRINT_A_INFRASTRUCTURE.md  SPRINT_COORDINATION.md  SPRINT_C_OBSERVABILITY.md  SPRINT_STATUS.md  SRS.md  SomaAgent01_API.md  SomaAgent01_Budgets.md  SomaAgent01_Deployment.md  SomaAgent01_Infrastructure.md  SomaAgent01_Integration_Roadmap.md  (+44 more)
infra/: .env  docker-compose.base.yaml  docker-compose.somaagent01.yaml
integrations/: __init__.py  opa.py  postgres.py  repositories.py  somabrain.py  tool_catalog.py
java/: Dockerfile  pom.xml
kafka-logs/: kafkaServer-gc.log.0  kafkaServer-gc.log.1  kafkaServer-gc.log.2  kafkaServer-gc.log.3  kafkaServer-gc.log.4  kafkaServer-gc.log.5  kafkaServer-gc.log.6  kafkaServer-gc.log.7  kafkaServer-gc.log.8  kafkaServer-gc.log.9
lago_deploy/: docker-compose.lago.yml  setup_lago.py
migrations/: env.py
observability/: __init__.py  log_redaction.py  metrics.py  tracing.py
orchestrator/: __init__.py  base_service.py  cache_sync_service.py  config.py  core.py  gateway_service.py  health_monitor.py  health_router.py  main.py  orchestrator.py  service_registry.py  unified_memory_service.py
policy/: confidence.rego  default.rego  multimodal.rego  skins.rego  soma_development.rego  (+2 more)
(+5422 files in other folders)
